fixed layout bug in carousel

--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,7 @@ textarea:focus {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	z-index: 10;
 }
 
 .header-link {
